--- a/v0.md
+++ b/v0.md
@@ -22,6 +22,9 @@ Below provides information for a species and distinct accessions/haplotypes with
 
 The first three letters of the genus and the first three letters of the species. For example, for *Solanum lycopersicum*, the species code would be `Sollyc`. If a code is already taken within the genus, any unique 6 character code can be made instead. For example, for *Solanum lycopersicoides*, one might choose the code `Solcoi`.
 
+#### Accession Name
+A name assigned to a particular accession
+
 #### Accession Code
 
 A unique integer assigned to a particular accession.
@@ -87,6 +90,33 @@ Assembly version numbers are formated as BUILD.PATCH, and the first production-r
 `{Assembly Name}` + `_` + `vBUILD.PATCH` + `.fasta`
 
 For example, `Sollyc1_v1.0.fasta`
+
+#### FASTA File Sequence Headers
+
+Headers start with a `>` character and are followed by the following space delimited fields:
+
+1. Sequence Name
+2. Assembly Name
+3. Genus
+4. Species
+5. Accession Name
+6. Accession Code
+7. Sequence Group
+
+For example:
+
+`>chr1 Sollyc1 Solanum lycopersicum M82 1 CHROMOSOME_1`
+
+#### FASTA File Sequences
+
+Sequences are all upper case, with 60 character line-wrapping. Sequencs should be sorted in the following order:
+
+1. Nuclear chromosomes, numerically sorted
+2. MITOCHONDRION group, numerically sorted (if available)
+3. chrC (if available)
+4. Unplaced contigs, numerically sorted
+5. Unplaced scaffolds, numerically sorted
+
 
 
 
