--- a/v0.md
+++ b/v0.md
@@ -1,4 +1,6 @@
-# pan-sol-spec (beta)
+
+<center><h1>pan-sol-spec (beta)</h1></center>
+
 The pan-sol specification provides details for naming, formatting, and versioning plant pan-genomic resources. Broadly, the specification provides details for organizing diverse plant samples within a species and their associated genome assembly and annotation files. The specification is especially well-suited for new species with few legacy files/conventions.
 
 **accounting for structural diversity**
@@ -9,7 +11,7 @@ This specification envisions a collection of "reference" or "platinum" quality e
 
 It is inconvenient to treat gene annotations independently for each sample within a species. Instead, this specification maintains a database of all known genes in the species. This database is initialized with all of the genes in *the* reference genome and is updated to include new genes as they are discovered.  When annotating genes in a new sample, known genes are annotated with their previously assigned ID/Names. If a gene is found in >1 copy, the ID is updated accordingly. This accounts for presence/absence variation while maintaining consistent information about known genes.
 
-## Samples
+# Samples
 
 Below provides information for a species and distinct accessions/haplotypes within a species.
 
@@ -24,7 +26,7 @@ Below provides information for a species and distinct accessions/haplotypes with
 
 > \* If a code is already taken within the genus, any unique 6 character code can be made instead. For example, for *Solanum lycopersicoides*, one might choose the code `Solcoi`.
 
-## Assemblies
+# Assemblies
 
 Below provides information for individual genome assemblies
 
@@ -38,9 +40,6 @@ Below provides information for individual genome assemblies
 | Sequence Group | A collection of sequences.                                                                                                      |
 
 ### Sequence Name/Group Assignment
-
-
-
 
 | sequence                                      | sequence name	                         | sequence name regex | sequence group    | example         |
 | :---                                          |    :----                               |         :---        |  :---             | :---            |
@@ -95,7 +94,7 @@ Sequences are all upper case, with 60 character line-wrapping. Sequences should 
 4. Unplaced contigs, numerically sorted
 5. Unplaced scaffolds, numerically sorted
 
-## Annotations
+# Annotations
 
 Below provides information for individual genome assembly annotations. This specification currently only addresses protein coding gene annotations.
 
