--- a/v0.md
+++ b/v0.md
@@ -1,5 +1,5 @@
 
-<center><h1>pan-sol-spec (beta)</h1></center>
+# pan-sol-spec (beta)
 
 The pan-sol specification provides details for naming, formatting, and versioning plant pan-genomic resources. Broadly, the specification provides details for organizing diverse plant samples within a species and their associated genome assembly and annotation files. The specification is especially well-suited for new species with few legacy files/conventions.
 
@@ -11,11 +11,11 @@ This specification envisions a collection of "reference" or "platinum" quality e
 
 It is inconvenient to treat gene annotations independently for each sample within a species. Instead, this specification maintains a database of all known genes in the species. This database is initialized with all of the genes in *the* reference genome and is updated to include new genes as they are discovered.  When annotating genes in a new sample, known genes are annotated with their previously assigned ID/Names. If a gene is found in >1 copy, the ID is updated accordingly. This accounts for presence/absence variation while maintaining consistent information about known genes.
 
-# Samples
+# 1. Samples
 
 Below provides information for a species and distinct accessions/haplotypes within a species.
 
-### Definitions
+### 1A. Definitions
 
 | term                | definition	                                                                                                               |
 | :---                | :---                                                                                                                       |
@@ -26,11 +26,11 @@ Below provides information for a species and distinct accessions/haplotypes with
 
 > \* If a code is already taken within the genus, any unique 6 character code can be made instead. For example, for *Solanum lycopersicoides*, one might choose the code `Solcoi`.
 
-# Assemblies
+# 2. Assemblies
 
 Below provides information for individual genome assemblies
 
-### Definitions
+### 2A. Definitions
 
 | term           | definition	                                                                                                                   |
 | :---           | :---                                                                                                                            |
@@ -39,7 +39,7 @@ Below provides information for individual genome assemblies
 | Sequence Name  | A unique sequence name, used as the FASTA identifier.                                                                           | 
 | Sequence Group | A collection of sequences.                                                                                                      |
 
-### Sequence Name/Group Assignment
+### 2B. Sequence Name/Group Assignment
 
 | sequence                                      | sequence name	                         | sequence name regex | sequence group    | example         |
 | :---                                          |    :----                               |         :---        |  :---             | :---            |
@@ -55,20 +55,20 @@ Below provides information for individual genome assemblies
 > 
 > \*\*\* if only a single master molcule is included, one can name it 'chrM' (`^chrM$`)
 
-### FASTA formatting and versioning
+### 2C. FASTA formatting and versioning
 
-#### Versioning
+#### I. Versioning
 Assembly version numbers are formated as BUILD.PATCH, and the first production-ready FASTA file is `v1.0`. When updating the assembly, increment the:
 
 1. BUILD version when the update induces a coordinate system change of existing sequences,
 2. PATCH version when the update does not induce a change to the coordinate system of existing sequences.
 
-#### FASTA File Name
+#### II. FASTA File Name
 `{Assembly Name}` + `_` + `vBUILD.PATCH` + `.fasta`
 
 For example, `Sollyc1_v1.0.fasta`
 
-#### FASTA File Sequence Headers
+#### III. FASTA File Sequence Headers
 
 Headers start with a `>` character and are followed by the following space delimited fields:
 
@@ -84,7 +84,7 @@ For example:
 
 `>chr1 Sollyc1 Solanum lycopersicum M82 1 CHROMOSOME_1`
 
-#### FASTA File Sequences
+#### IV. FASTA File Sequences
 
 Sequences are all upper case, with 60 character line-wrapping. Sequences should be sorted in the following order:
 
@@ -94,69 +94,79 @@ Sequences are all upper case, with 60 character line-wrapping. Sequences should 
 4. Unplaced contigs, numerically sorted
 5. Unplaced scaffolds, numerically sorted
 
-# Annotations
+# 3. Annotations
 
 Below provides information for individual genome assembly annotations. This specification currently only addresses protein coding gene annotations.
 
-### Gene Database
+### 3A. Gene Database
 Genes are well-conserved within a typical plant species. Rather than treating gene annotations independently across intra-species accessions, it is prudent to maintain a species-wide annotation/database. In this scenario, assembly-specific annotations simply provide the gene coordinates and child features (mRNA, exon, CDS, and UTR) for a particular assembly. Still, this system must account for genic structural variation that is common in plant genomes.
 
-### GFF3 formatting and versioning
+### 3B. GFF3 formatting and versioning
 Individual assembly annotations should be in the [GFF3 format](https://m.ensembl.org/info/website/upload/gff3.html).
 
-#### Versioning
+#### I. Versioning
 Annotation version numbers are formated as BUILD.MAJOR.MINOR, and the first production-ready GFF3 file is `v1.0.0`. The BUILD must match the corresponding assembly build. When updating the annotation, increment the:
 
 1. BUILD version when the update provides an annotation to a new assembly BUILD (coordinate system),
 2. MAJOR version for major annotation changes, such as the addition/removal/adjustment of many new features,
 3. MINOR version for minor changes such as changes to a small number of features or to metadata/names
 
-#### GFF3 File Name
+#### II. GFF3 File Name
 `{Assembly Name}` + `_genes_` + `vBUILD.MAJOR.MINOR` + `.gff3`
 
 For example, `Sollyc1_genes_v1.0.0.gff3`
 
-#### Additional Files and Their Names
+#### III. Additional Files and Their Names
 Proteins, CDS, and cDNA sequences should be provided in FASTA format for each GFF3 version. They should be named as follows:
 
 | resource             | file name	                                                              | example                               | 
 | :---                 | :---                                                                     | :---                                  |
 | protein sequences \* | `{Assembly Name}` + `_genes_` + `vBUILD.MAJOR.MINOR` + `.proteins.fasta` | `Sollyc1_genes_v1.0.0.proteins.fasta` |
 | CDS sequences        | `{Assembly Name}` + `_genes_` + `vBUILD.MAJOR.MINOR` + `.CDS.fasta`      | `Sollyc1_genes_v1.0.0.CDS.fasta`      |
-| protein sequences    | `{Assembly Name}` + `_genes_` + `vBUILD.MAJOR.MINOR` + `.cDNA.fasta`     | `Sollyc1_genes_v1.0.0.cDNA.fasta`     |
+| cDNA sequences    | `{Assembly Name}` + `_genes_` + `vBUILD.MAJOR.MINOR` + `.cDNA.fasta`     | `Sollyc1_genes_v1.0.0.cDNA.fasta`     |
 
-> \* Terminal stop codons (often represented as `.`) should not be excluded from the FASTA file. Sequences with internal stop codons should have "INTERNAL STOP" in the associated FASTA header so that they could be easily removed if necessary.
+> \* Terminal stop codons (often represented as `.`) should be excluded from the FASTA file. Sequences with internal stop codons should have "INTERNAL STOP" in the associated FASTA header so that they could be easily removed by a user if desired.
 
-### Gene IDs and Names
+### 3C. Gene IDs and Names
 
-#### Accession ID
+#### I. Accession ID
 After establishing a draft annotation, each gene should be assigned a new attribute called an accession ID (`acc_id`). The accession ID is made up of 3 components:
 
-##### The assembly name
+1.  The assembly name
+
 The assembly name: e.g. `Sollyc1`
 
-##### A chromosome code
+2. A chromosome code
 
-The minimum number of digits needed to representt the largest chromosome number should be used for the chromosome code. It should also be followed by `g`. E.g. `02g` for the second chromosome of a genome with >9 and <99 chromosomes.
+For nuclear chromosomes, use the minimum number of digits needed to represent the largest chromosome number. The code should also be followed by `g`. E.g. `02g` for the second chromosome of a genome with >9 and <99 chromosomes. See below for the chrommosome codes of other sequence groups:
 
-##### A 6 digit unique numeric ID
+| sequence group   | chromosome code |
+| :---             |  :---           |
+| UNPLACED_NUCLEAR | 00g \*          |
+| CHLOROPLAST      | Cg              |
+| MITOCHONDRION    | Mg              |
+
+> \* this code can also be used for unlocalized pan-genome genes from iterative mapping studies.
+
+3. A 6 digit unique numeric ID
+
 This specification does not require ordinal ID numbers. However, for ordinal numbers, the first gene number should be `000010` and subsequent numbers should be increments of 10.
 
-Using these components, `Sollyc1.02g000010` is an example of the first gene on chromosome 2 of a tomato assembly.
+Using these components, `Sollyc1.02g000010` is an example of the first gene on chromosome 2 of an inbred tomato assembly.
 
-#### Gene IDs
+#### II. Gene IDs
 
-All default gene IDs must be replaced according to the following rules"
+All default gene IDs must be replaced according to the following rules:
 
 - If annotating the first accession in a species, the gene ID (`ID`) should be set to match the accession ID (`acc_ID`). The species gene database (referred to in the abstract) should then be initialized with these gene IDs and the accession that they were found in.
 
 - If this is not the first accession to be annotated in the species, a homology-based or "lift over" annotation tool should be used to assign gene IDs for genes already present in the database.
   
-- For any genes that are not already in the genes (novel genes), the gene ID is set to match the accession ID. These genes should then be added to the database, indicating which accession they were found in.
+- For any genes that are not already in the database (novel genes), the gene ID is set to match the accession ID. These genes should then be added to the database, indicating which accession they were found in.
 
 - If a known gene is found more than once, `-cN` should be added to the end of the gene ID, where `N` is the copy number of the gene.
 
-#### Gene Names
+#### III. Gene Names
 Gene names can be added to the database at any time, and they should be assigned to the `Name` GFF3 attribute where possible.
 
 
