--- a/v0.md
+++ b/v0.md
@@ -1,19 +1,17 @@
 
 # pan-sol-spec (beta)
 
-The pan-sol specification provides details for naming, formatting, and versioning plant pan-genomic resources. Broadly, the specification provides details for organizing diverse plant samples within a species and their associated genome assembly and annotation files. The specification is especially well-suited for new species with few legacy files/conventions.
+The pan-sol specification provides details for naming, formatting, and versioning plant pan-genomic resources. Specifically, the specification provides instructions for organizing diverse plant samples within a species and their associated genome assembly and annotation files.
 
 **accounting for structural diversity**
 
-This specification envisions a collection of "reference" or "platinum" quality eukaryotic genome assemblies. For convenience, one (the first for species without an existing reference) assembly is considered _the_ reference genome. The collection of all assemblies establishes an abstract pan-genome, easily amenable to graph-based and other multi-reference pan-genome analyses. Aside from multi-reference analyses, any individual assembly could be used as a "reference", enabling "personalized" genomics analyses.
+This specification envisions a collection of "reference" or "platinum" quality plant genome assemblies. For convenience, one (the first for species without an existing reference) assembly is considered _the_ reference genome. The collection of all assemblies establishes an abstract pan-genome, easily amenable to graph-based and other multi-reference pan-genome analyses. Aside from multi-reference analyses, any individual assembly could be used as a "reference", enabling "personalized" genomics analyses.
 
 **accounting for genes**
 
 It is inconvenient to treat gene annotations independently for each sample within a species. Instead, this specification maintains a database of all known genes in the species. This database is initialized with all of the genes in *the* reference genome and is updated to include new genes as they are discovered.  When annotating genes in a new sample, known genes are annotated with their previously assigned ID/Names. If a gene is found in >1 copy, the ID is updated accordingly. This accounts for presence/absence variation while maintaining consistent information about known genes.
 
 # 1. Samples
-
-Below provides information for a species and distinct accessions/haplotypes within a species.
 
 ### 1A. Definitions
 
@@ -26,9 +24,7 @@ Below provides information for a species and distinct accessions/haplotypes with
 
 > \* If a code is already taken within the genus, any unique 6 character code can be made instead. For example, for *Solanum lycopersicoides*, one might choose the code `Solcoi`.
 
-# 2. Assemblies
-
-Below provides information for individual genome assemblies
+# 2. Genome Assemblies
 
 ### 2A. Definitions
 
@@ -105,10 +101,10 @@ Genes are well-conserved within a typical plant species. Rather than treating ge
 Individual assembly annotations should be in the [GFF3 format](https://m.ensembl.org/info/website/upload/gff3.html).
 
 #### I. Versioning
-Annotation version numbers are formated as BUILD.MAJOR.MINOR, and the first production-ready GFF3 file is `v1.0.0`. The BUILD must match the corresponding assembly build. When updating the annotation, increment the:
+Annotation version numbers are formated as BUILD.MAJOR.MINOR, and the first production-ready GFF3 file is `v1.0.0`. The BUILD must match the corresponding assembly BUILD. When updating the annotation, increment the:
 
 1. BUILD version when the update provides an annotation to a new assembly BUILD (coordinate system),
-2. MAJOR version for major annotation changes, such as the addition/removal/adjustment of many new features,
+2. MAJOR version for major annotation changes, such as the addition/removal/adjustment of many features,
 3. MINOR version for minor changes such as changes to a small number of features or to metadata/names
 
 #### II. GFF3 File Name
@@ -117,7 +113,7 @@ Annotation version numbers are formated as BUILD.MAJOR.MINOR, and the first prod
 For example, `Sollyc1_genes_v1.0.0.gff3`
 
 #### III. Additional Files and Their Names
-Proteins, CDS, and cDNA sequences should be provided in FASTA format for each GFF3 version. They should be named as follows:
+Proteins, CDS, and cDNA sequences should be provided in FASTA format for each annotation version. They should be named as follows:
 
 | resource             | file name	                                                              | example                               | 
 | :---                 | :---                                                                     | :---                                  |
@@ -130,13 +126,15 @@ Proteins, CDS, and cDNA sequences should be provided in FASTA format for each GF
 ### 3C. Gene IDs and Names
 
 #### I. Accession ID
-After establishing a draft annotation, each gene should be assigned a new attribute called an accession ID (`acc_id`). The accession ID is made up of 3 components:
+After establishing a draft annotation, each gene should be assigned a new attribute called an accession ID (`acc_id`). The accession ID is constructed as follows:
 
-1.  The assembly name
+`{Assembly Name}` + `.` + `{Chromosome Code}` + `{numeric ID}`
+
+1.  Assembly Name
 
 The assembly name: e.g. `Sollyc1`
 
-2. A chromosome code
+2. Chromosome Code
 
 For nuclear chromosomes, use the minimum number of digits needed to represent the largest chromosome number. The code should also be followed by `g`. E.g. `02g` for the second chromosome of a genome with >9 and <99 chromosomes. See below for the chrommosome codes of other sequence groups:
 
@@ -148,11 +146,11 @@ For nuclear chromosomes, use the minimum number of digits needed to represent th
 
 > \* this code can also be used for unlocalized pan-genome genes from iterative mapping studies.
 
-3. A 6 digit unique numeric ID
+3. 6 digit unique numeric ID
 
 This specification does not require ordinal ID numbers. However, for ordinal numbers, the first gene number should be `000010` and subsequent numbers should be increments of 10.
 
-Using these components, `Sollyc1.02g000010` is an example of the first gene on chromosome 2 of an inbred tomato assembly.
+Using these components, `Sollyc1.02g000010` is an example of the first gene on chromosome 2 of an unphased tomato assembly.
 
 #### II. Gene IDs
 
@@ -162,11 +160,31 @@ All default gene IDs must be replaced according to the following rules:
 
 - If this is not the first accession to be annotated in the species, a homology-based or "lift over" annotation tool should be used to assign gene IDs for genes already present in the database.
   
-- For any genes that are not already in the database (novel genes), the gene ID is set to match the accession ID. These genes should then be added to the database, indicating which accession they were found in.
+    - For any genes that are not already in the database (novel genes), the gene ID is set to match the accession ID. These genes should then be added to the database, indicating which accession they were found in.
 
-- If a known gene is found more than once, `-cN` should be added to the end of the gene ID, where `N` is the copy number of the gene.
+    - If a known gene is found more than once, `-cN` should be added to the end of the gene ID, where `N` is the copy number of the gene. Some "lift over" tools do this automatically.
 
 #### III. Gene Names
 Gene names can be added to the database at any time, and they should be assigned to the `Name` GFF3 attribute where possible.
 
+### 3D. Protein Coding Gene Features
 
+Below indicates features of protein coding genes and their required GFF3 attributes:
+
+
+| feature         | feature ID                            |  example ID                             | required attributes    | 
+| :---            |  :---                                 | :---                                    | :---                   |
+| gene            | gene ID (see above)                   | `Sollyc1.02g000010`                     | ID, acc_ID, Name, Note |
+| mRNA            | gene ID + `.N` \*                     | `Sollyc1.02g000010.1`                   | ID, Parent, Name, Note |
+| exon            |  `exon:` + gene ID + `.N.M` \*\*      | `exon:Sollyc1.02g000010.1.1`            | ID, Parent             |
+| CDS             | `CDS:` + gene ID + `.N.M`             | `CDS:Sollyc1.02g000010.1.1`             | ID, Parent             |
+| five_prime_UTR  | `five_prime_UTR:` + gene ID + `.N.M`  | `five_prime_UTR:Sollyc1.02g000010.1.1`  | ID, Parent             |
+| three_prime_UTR | `three_prime_UTR:` + gene ID + `.N.M` | `three_prime_UTR:Sollyc1.02g000010.1.1` | ID, Parent             |
+
+> \* `N` is a unique integer sequentially assigned to each mRNA feature. 
+> 
+> \*\* `M` is a unique integer sequentially assigned to each child feature of a mRNA feature (identified with `N`).
+
+
+### 3E. Functional Annotations
+Functional annotations for each mRNA features should be provided in the `Note` GFF3 attribute. Optionally, for a given gene, child mRNA functional annotations may be aggregated in the gene's `Note` attribute.
