updated MITOCHONDRION group regex

--- a/v0.md
+++ b/v0.md
@@ -43,7 +43,7 @@ It is inconvenient to treat gene annotations independently for each sample withi
 | unplaced nuclear scaffolds                    | `scf` + unique 8 digit integer         |  `^scf\d{8}$`       |  UNPLACED_NUCLEAR |  `scf00000001`  |
 | unplaced nuclear contigs                      | `ctg` + unique 8 digit integer         |  `^ctg\d{8}$`       |  UNPLACED_NUCLEAR |  `ctg00000001`  |
 | chloroplast genome                            | `chrC`                                 |  `^chrC$`           |  CHLOROPLAST      |  `chrC`         |
-| mitochondrial genome molecule/scaffold/contig | `chrM` + unique 8 digit integer \*\*\* |  `^chrM_\d$`        |  MITOCHONDRION    |  `chrM00000001` |
+| mitochondrial genome molecule/scaffold/contig | `chrM` + unique 8 digit integer \*\*\* |  `^chrM\d{8}$`        |  MITOCHONDRION    |  `chrM00000001` |
 
 > \* where `N` is the chromosome number
 >
