fixed acc_ID typo

--- a/v0.md
+++ b/v0.md
@@ -126,7 +126,7 @@ Proteins, CDS, and cDNA sequences should be provided in FASTA format for each an
 ### 3C. Gene IDs and Names
 
 #### I. Accession ID
-After establishing a draft annotation, each gene should be assigned a new attribute called an accession ID (`acc_id`). The accession ID is constructed as follows:
+After establishing a draft annotation, each gene should be assigned a new attribute called an accession ID (`acc_ID`). The accession ID is constructed as follows:
 
 `{Assembly Name}` + `.` + `{Chromosome Code}` + `{numeric ID}`
 
