rule against "chr0"

--- a/v0.md
+++ b/v0.md
@@ -82,7 +82,7 @@ For example:
 
 #### IV. FASTA File Sequences
 
-Sequences are all upper case, with 60 character line-wrapping. Sequences should be sorted in the following order:
+Sequences should be all upper case, with 60 character line-wrapping. Do not concatenate sequence in the UNPLACED_NUCLEAR group to create a "chr0" sequence. Sequences should be sorted in the following order:
 
 1. Nuclear chromosomes, numerically sorted
 2. MITOCHONDRION group, numerically sorted (if available)
